--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -56,6 +56,16 @@
     border: 2px solid #ebedee;
   }
 
+
+
+.enabled-jobs{
+    background-color: #4285f4;
+  }
+
+.disabled-jobs{
+    background-color: darkgray;
+    }
+
   .buttonCampo1:hover {
     background-color: #4285f4;
     color: white;
